--- a/src/templates/partials/_tokensHero.html
+++ b/src/templates/partials/_tokensHero.html
@@ -19,12 +19,20 @@
       tendencies of the market.
     </p>
     <h2 class="tokensHero__subtitle">NEB contract address</h2>
-    <form action="#" class="tokensHero-form">
-      <input class="tokensHero-form__text" type="text"
-        value="0xd84500DDAF560dF7bE57702b3A8769A782Ce0277" disabled />
-    </form>
-    <button class="btn_lg tokensHero__btn">etherscan.io</button>
-    <button class="btn_lg tokensHero__btn">Etherdelta.com</button>
+    <div class="hero-form">
+      <form action="#" class="hero-form-value">
+        <div>
+          <input title="0xd84500DDAF560dF7bE57702b3A8769A782Ce0277" class="hero-form-value__text" type="text" value="0xd84500DDAF560dF7bE57702b3A8769A782Ce0277" disabled />
+        </div>
+      </form>
+      <form action="#" class="hero-form-copy">
+        <div class="hero-form-copy__item"><img src="img/form-img.png" class="hero-form-copy__img" alt="copy"></div>
+      </form>
+    </div>
+    <div class="hero-link">
+      <a href="#" class="btn_lg hero-link__item btn_dark-blue">etherscan.io</a>
+      <a href="#" class="btn_lg hero-link__item btn_white-border">Etherdelta.com</a>
+    </div>
   </div>
 </div>
 <!-- END TOKENS HERO block -->
