--- a/src/templates/partials/_tokensTutorial.html
+++ b/src/templates/partials/_tokensTutorial.html
@@ -6,7 +6,7 @@
       You will need to use myetherwallet.com or any similar wallet which
       supports ERC20 Token.
     </p>
-    <img src="../../img/tut1.png" alt="tutorial" />
+    <img src="img/tut1.png" alt="tutorial" />
     <p class="tutorial__desc">
       To start with, create wallet account and use a password.
     </p>
@@ -14,19 +14,19 @@
       Keystore File is generated automatically, then you’ll need to save all
       information in a secure place!
     </p>
-    <img src="../../img/tut2.png" alt="tutorial" />
+    <img src="img/tut2.png" alt="tutorial" />
     <p class="tutorial__desc">
       Go to the View Wallet Info section authorize via select the Keystore File
       (UTC / JSON) or any other method of authorization you have chosen.
     </p>
-    <img src="../../img/tut3.png" alt="tutorial" />
+    <img src="img/tut3.png" alt="tutorial" />
     <p class="tutorial__desc">Enter your File and previously saved password.</p>
-    <img src="../../img/tut4.png" alt="tutorial" />
+    <img src="img/tut4.png" alt="tutorial" />
     <p class="tutorial__desc">
       Go to View Wallet info section, authorize same way you did it before and
       proceed to add the NEB Token.
     </p>
-    <img src="../../img/tut5.png" alt="tutorial" />
+    <img src="img/tut5.png" alt="tutorial" />
   </div>
 </div>
 </div>
