--- a/src/sass/components/_news.sass
+++ b/src/sass/components/_news.sass
@@ -28,18 +28,13 @@
     text-align: center
 
 .news-box
-    display: flex
-    justify-content: space-between
-    width: 100%
     margin-bottom: 35px
     +md
         margin-bottom: 13px
-    +sm
-        flex-direction: column
-        
+
     &__item
         width: 300px
-        padding: 0 25px
+        // padding: 0 25px
         +md
             width: 216px
         +sm
@@ -68,8 +63,8 @@
     height: auto
     margin: auto
     display: block
-    +sm
-        width: 100%
+    // +sm
+    //     width: 100%
 
 .n-box:before
     content: url(../img/news-box.png)
@@ -81,3 +76,137 @@
         top: 165px
     +sm
         display: none
+
+.row
+  display: flex
+  flex-wrap: wrap
+  margin-left: -10px
+  margin-right: -10px
+
+
+.col-1 
+  width: 8.333333%
+
+.col-2 
+  width: 16.666667%
+
+
+.col-3
+  width: 25%
+
+.col-4 
+  width: 33.333333%
+
+.col-5 
+  width: 41.666667%
+
+.col-6 
+  width: 50%
+
+.col-7 
+  width: 58.333333%
+
+.col-8
+  width: 66.666667%
+
+
+.col-9 
+  width: 75%
+
+
+.col-10 
+  width: 83.333333%
+
+
+.col-11 
+  width: 91.666667%
+
+
+.col-12 
+  width: 100%
+
+
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12  
+  display: flex
+  padding-left: 10px
+  padding-right: 10px
+  box-sizing: border-box
+
++md
+  .col-sm-1
+    width: 8.333333%
+
+  .col-sm-2
+    width: 16.666667%
+
+  .col-sm-3
+    width: 25%
+
+  .col-sm-4
+    width: 33.333333%
+
+  .col-sm-5
+    width: 41.666667%
+
+  .col-sm-6
+    width: 50%
+
+  .col-sm-7
+    width: 58.333333%
+
+  .col-sm-8
+    width: 66.666667%
+
+  .col-sm-9
+    width: 75%
+
+  .col-sm-10
+    width: 83.333333%
+
+  .col-sm-11
+    width: 91.666667%
+
+  .col-sm-12
+    width: 100%
++sm
+    .col-xs-1 
+        width: 8.333333%
+
+    .col-xs-2
+        width: 16.666667%
+
+
+    .col-xs-3
+        width: 25%
+
+    .col-xs-4 
+        width: 33.333333%
+
+    .col-xs-5
+        width: 41.666667%
+
+    .col-xs-6 
+        width: 50%
+
+
+    .col-xs-7 
+        width: 58.333333%
+
+
+    .col-xs-8
+        width: 66.666667%
+
+
+    .col-xs-9
+        width: 75%
+
+
+    .col-xs-10
+        width: 83.333333%
+
+    .col-xs-11
+        width: 91.666667%
+
+
+    .col-xs-12
+        width: 100%
