--- a/src/sass/components/_tokensTutorial.sass
+++ b/src/sass/components/_tokensTutorial.sass
@@ -31,6 +31,7 @@
             font-size: 14px
             line-height: 22px
 .tutorial img
-    padding: 18px 0
     max-width: 100%
     height: auto
+    display: block
+    margin: 15px 0
