--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -8,7 +8,7 @@
       <div class="about-features">
         <div class="about-features-left">
           <div class="about-features__item">
-            <img src="../../img/item_1.svg" alt="item1">
+            <img src="img/item_1.svg" alt="item1">
             <p>The neural network collects and analyses data 24/7 and provides forecasts for various cryptocurrencies’
               exchange rates. There are three types of forecasts: for 24 hours, for 48 hours and for one week.
               Depending on the type of forecast and the chosen cryptocurrency, the accuracy of the forecast spans
@@ -17,7 +17,7 @@
             </p>
           </div>
           <div class="about-features__item">
-            <img src="../../img/item_3.svg" alt="item3">
+            <img src="img/item_3.svg" alt="item3">
             <p>
               The analysis takes less than a second
               and comprises the essental aspects
@@ -25,7 +25,7 @@
             </p>
           </div>
           <div class="about-features__item">
-            <img src="../../img/item_4.svg" alt="item4">
+            <img src="img/item_4.svg" alt="item4">
             <p>
               The program will be further enriched by introducing the remaining elements of technical analysis
               (Fibonacci retracement, Elliot wave theory) and fundamental analysis, which will include news analysis to
@@ -34,7 +34,7 @@
         </div>
         <div class="about-features-right">
           <div class="about-features__item">
-            <img src="../../img/item_2.svg" alt="item2">
+            <img src="img/item_2.svg" alt="item2">
             <p>The project is targeted at traders with any level of preparaton and experience. Traders no longer have
               to be aware of every miniscule detail of technical analysis, wastng tme and efort trying to make their
               skills and knowledge deeper and more specifc. It facilitates the work of professional traders, allows
@@ -44,13 +44,13 @@
             </p>
           </div>
           <div class="about-features__item">
-            <img src="../../img/item_5.svg" alt="item5">
+            <img src="img/item_5.svg" alt="item5">
             <p>
               NeuroBot’s algorithm is based on LSTM-network (Long short-term memory) coupled with Gradient Boosting -
               another machine learning technique.</p>
           </div>
           <div class="about-features__item">
-            <img src="../../img/item_6.svg" alt="item6">
+            <img src="img/item_6.svg" alt="item6">
             <p>
               Thanks to the abilites of neural networks, NeuroBot is constantly learning to beter correspond to the
               state of the market, to make more accurate forecasts and improve the quality of the resultng work. </p>
