--- a/src/templates/partials/_mainForecast.html
+++ b/src/templates/partials/_mainForecast.html
@@ -6,7 +6,7 @@
     <div class="forecast-box">
       <h2 class="forecast-block__title">Popular forecasts</h2>
       <p class="forecast-block__desc">The forecasts are updated every 30 minutes</p>
-      <div class="forecast-block__currency">
+      <div class="forecast-currency">
         {{ mixins.currency([
         {list: ['BTC', 'LTC', 'ETH', 'XRP', 'DASH', 'XMR']}
         ]) }}
