--- a/src/templates/partials/_tokensRoadmap.html
+++ b/src/templates/partials/_tokensRoadmap.html
@@ -5,9 +5,16 @@
       <h2 class="benefits__title">Roadmap <span>2017-2018</span></h2>
       <div class="benefits-block">
         <div class="benefits-block__item">
+          <div class="lem-right lem_white">
+            <div class="lem__text">
+              <span>10</span>
+              <p>2017</p>
+            </div>
+          </div>
           <div class="help">
             <div class="benefits-block__ico">
-              <img src="../../img/elliot.svg" alt="elliot teory" />
+              <img src="img/elliot.svg" class="benefits-ico-desctop" alt="elliot teory" />
+              <img src="img/elliot2.svg" class="benefits-ico-tablet" alt="API">
             </div>
             <div class="benefits-block__desc">
               <h3 class="benefits-block__subtitle">Elliott wave theory</h3>
@@ -20,13 +27,16 @@
           </div>
         </div>
         <div class="benefits-block__item">
-          <div class="lem">
-            <div><p>01</p>
-            <p>18</p></div>
+          <div class="lem-left lem_white">
+            <div class="lem__text">
+              <span>11</span>
+              <p>2017</p>
+            </div>
           </div>
           <div class="help">
             <div class="benefits-block__ico">
-              <img src="../../img/basic.svg" alt="Basic analysis" />
+              <img src="img/basic.svg" class="benefits-ico-desctop" alt="Basic analysis" />
+              <img src="img/basic2.svg" class="benefits-ico-tablet" alt="API">
             </div>
             <div class="benefits-block__desc">
               <h3 class="benefits-block__subtitle">Basic analysis of news</h3>
@@ -39,9 +49,16 @@
         </div>
         <div class="roadmap-img-two"></div>
         <div class="benefits-block__item">
+          <div class="lem-right">
+            <div class="lem__text">
+              <span>01</span>
+              <p>2018</p>
+            </div>
+          </div>
           <div class="help">
             <div class="benefits-block__ico">
-              <img src="../../img/api.svg" alt="API" />
+              <img src="img/api.svg" class="benefits-ico-desctop" alt="API" />
+              <img src="img/api2.svg" class="benefits-ico-tablet" alt="API">
             </div>
             <div class="benefits-block__desc">
               <h3 class="benefits-block__subtitle">API for trading systems</h3>
@@ -53,9 +70,16 @@
           </div>
         </div>
         <div class="benefits-block__item">
+          <div class="lem-left">
+            <div class="lem__text">
+              <span>03</span>
+              <p>2018</p>
+            </div>
+          </div>
           <div class="help">
             <div class="benefits-block__ico">
-              <img src="../../img/improved.svg" alt="impoved" />
+              <img src="img/improved.svg" class="benefits-ico-desctop" alt="impoved" />
+              <img src="img/improved2.svg" class="benefits-ico-tablet" alt="API">
             </div>
             <div class="benefits-block__desc">
               <h3 class="benefits-block__subtitle">Improved news analysis</h3>
@@ -69,9 +93,16 @@
         </div>
         <div class="roadmap-img-three"></div>
         <div class="benefits-block__item">
+          <div class="lem-right">
+            <div class="lem__text">
+              <span>04</span>
+              <p>2018</p>
+            </div>
+          </div>
           <div class="help">
             <div class="benefits-block__ico">
-              <img src="../../img/adding.svg" alt="adding" />
+              <img src="img/adding.svg" class="benefits-ico-desctop" alt="adding" />
+              <img src="img/adding2.svg" class="benefits-ico-tablet" alt="API">
             </div>
             <div class="benefits-block__desc">
               <h3 class="benefits-block__subtitle">
@@ -85,9 +116,16 @@
           </div>
         </div>
         <div class="benefits-block__item">
+          <div class="lem-left">
+            <div class="lem__text">
+              <span>05</span>
+              <p>2018</p>
+            </div>
+          </div>
           <div class="help">
             <div class="benefits-block__ico">
-              <img src="../../img/release.svg" alt="release" />
+              <img src="img/release.svg" class="benefits-ico-desctop" alt="release" />
+              <img src="img/release2.svg" class="benefits-ico-tablet" alt="API">
             </div>
             <div class="benefits-block__desc">
               <h3 class="benefits-block__subtitle">
